--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@mui/material": "^5.14.0",
+    "@tiptap/extension-code-block": "^3.4.2",
     "@tiptap/extension-color": "^3.4.2",
     "@tiptap/extension-link": "^3.4.4",
     "@tiptap/extension-subscript": "^3.4.5",
