Загрузка изображений до 5 Мб

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,6 +3,11 @@ worker_processes 1;
 events { worker_connections 1024; }
 
 http {
+  # Увеличиваем лимиты для загрузки файлов на уровне http
+  client_max_body_size 50M;
+  client_body_timeout 60s;
+  client_header_timeout 60s;
+
   server {
     listen 80;
 
@@ -32,6 +37,10 @@ http {
     # API админ-бэкенда — конкретный маршрут для /api/admin-backend/
     # Обратите внимание: proxy_pass без завершающего слэша, чтобы не переписывать URI
     location /api/admin-backend/ {
+      # Увеличиваем лимиты для API загрузки файлов
+      client_max_body_size 50M;
+      client_body_timeout 60s;
+      
       proxy_pass http://admin-backend:4001;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
@@ -41,6 +50,10 @@ http {
     # Общий маршрут для других /api/ запросов
     # proxy_pass с завершающим слэшем переписывает путь корректно для других сервисов, если нужно
     location /api/ {
+      # Увеличиваем лимиты для API загрузки файлов
+      client_max_body_size 50M;
+      client_body_timeout 60s;
+      
       proxy_pass http://admin-backend:4001/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
