--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,6 +101,7 @@ services:
       - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
+      - NODE_OPTIONS="--max-old-space-size=4096"
     depends_on:
       - admin-backend
       - auth-service
