--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -10,6 +10,7 @@
     "@tiptap/extension-link": "^3.7.2",
     "@tiptap/extension-subscript": "^3.4.5",
     "@tiptap/extension-superscript": "^3.4.5",
+    "@tiptap/extension-text-align": "^3.11.1",
     "@tiptap/extension-text-style": "^3.4.2",
     "@tiptap/extension-underline": "^3.7.2",
     "@tiptap/react": "^3.4.2",
