--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -6,10 +6,15 @@
     "@mui/material": "^5.14.0",
     "@tiptap/extension-code-block": "^3.7.2",
     "@tiptap/extension-color": "^3.4.2",
+    "@tiptap/extension-document": "^3.11.1",
+    "@tiptap/extension-dropcursor": "^3.11.1",
+    "@tiptap/extension-gapcursor": "^3.11.1",
     "@tiptap/extension-image": "^3.7.2",
     "@tiptap/extension-link": "^3.7.2",
+    "@tiptap/extension-paragraph": "^3.11.1",
     "@tiptap/extension-subscript": "^3.4.5",
     "@tiptap/extension-superscript": "^3.4.5",
+    "@tiptap/extension-text": "^3.11.1",
     "@tiptap/extension-text-align": "^3.11.1",
     "@tiptap/extension-text-style": "^3.4.2",
     "@tiptap/extension-underline": "^3.7.2",
